--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 body {
     background-color: #fafafa;
-    padding: 20px;
+    padding: 1em;
 }
 
 .message {
     background-color: rgb(230, 230, 230);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 40px;
+    font-size: 2em;
     display: inline-block;
-    padding: 0 30px 0 20px;
-    margin: 2px;
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
-    line-height: 10px;
+    padding: 0 1em 0 0.8em;
+    margin: 0.05em;
+    border-top-right-radius: 1.5em;
+    border-bottom-right-radius: 1.5em;
+    line-height: 0.75em;
 }
 
 .message.top {
-    border-top-left-radius: 40px;
+    border-top-left-radius: 1.5em;
 }
 
 .message.bottom {
-    border-bottom-left-radius: 40px;
+    border-bottom-left-radius: 1.5em;
 }
 
 .animate {
@@ -29,76 +29,59 @@ body {
 
 /* Smaller screens */
 
-@media (max-width: 1200px), (max-height: 900px) { 
+@media (max-width: 1050px), (max-height: 900px) { 
     .message {
-        font-size: 30px;
-        padding: 0 20px 0 15px;
-        border-top-right-radius: 30px;
-        border-bottom-right-radius: 30px;
+        font-size: 1.75em;
     }
 
-    .message.top {
-        border-top-left-radius: 30px;
-    }
-    
-    .message.bottom {
-        border-bottom-left-radius: 30px;
-    }
+    /* body {
+        background-color: lightgoldenrodyellow;
+    } */
 
 }
 
-
-@media (max-width: 950px), (max-height: 750px) { 
+@media (max-width: 900px), (max-height: 750px) { 
     .message {
-        font-size: 20px;
-        padding: 0 15px 0 10px;
-        border-top-right-radius: 20px;
-        border-bottom-right-radius: 20px;
+        font-size: 1.5em;
     }
 
-    .message.top {
-        border-top-left-radius: 20px;
-    }
-    
-    .message.bottom {
-        border-bottom-left-radius: 20px;
-    }
+    /* body {
+        background-color: yellow;
+    } */
 
 }
 
-@media (max-width: 650px), (max-height: 550px) { 
+@media (max-width: 750px), (max-height: 550px) { 
     .message {
-        font-size: 15px;
-        padding: 0 10px 0 10px;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
+        font-size: 1.25em;
+
     }
 
-    .message.top {
-        border-top-left-radius: 15px;
-    }
-    
-    .message.bottom {
-        border-bottom-left-radius: 15px;
-    }
+    /* body {
+        background-color: orange;
+    } */
 
 }
 
-@media (max-width: 500px), (max-height: 450px) { 
+@media (max-width: 650px), (max-height: 450px) { 
     .message {
-        font-size: 10px;
-        padding: 0 10px 0 8px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
+        font-size: 1em;
     }
 
-    .message.top {
-        border-top-left-radius: 10px;
+    /* body {
+        background-color: red;
+    } */
+
+}
+
+@media (max-width: 520px), (max-height: 400px) { 
+    .message {
+        font-size: 0.70em;
     }
-    
-    .message.bottom {
-        border-bottom-left-radius: 10px;
-    }
+
+    /* body {
+        background-color: blueviolet;
+    } */
 
 }
 
