--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     background-color: rgb(230, 230, 230);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 2em;
+    position: relative;
+    left: -1000px;
     display: inline-block;
     padding: 0 1em 0 0.8em;
     margin: 0.05em;
@@ -34,20 +36,12 @@ body {
         font-size: 1.75em;
     }
 
-    /* body {
-        background-color: lightgoldenrodyellow;
-    } */
-
 }
 
 @media (max-width: 900px), (max-height: 750px) { 
     .message {
         font-size: 1.5em;
     }
-
-    /* body {
-        background-color: yellow;
-    } */
 
 }
 
@@ -57,10 +51,6 @@ body {
 
     }
 
-    /* body {
-        background-color: orange;
-    } */
-
 }
 
 @media (max-width: 650px), (max-height: 450px) { 
@@ -68,36 +58,11 @@ body {
         font-size: 1em;
     }
 
-    /* body {
-        background-color: red;
-    } */
-
 }
 
 @media (max-width: 520px), (max-height: 400px) { 
     .message {
         font-size: 0.70em;
-    }
-
-    /* body {
-        background-color: blueviolet;
-    } */
-
-}
-
-
-/* ANIMATIONS */
-
-@keyframes appear {
-
-    0% {
-        transform: scale(0.3, 1) translate(-500px,100px);
-        opacity: 0;
-    }
-
-    100% {
-        transform: scale(1) translate(0,0);
-        opacity: 1;
     }
 
 }
