change messages, update responsiveness, remove border radius
made messages shorter so they are easier to work with

fixed small content on mobile screens

removed border radius fromt the message divs,
will add the curves on separately

--- a/style.css
+++ b/style.css
@@ -9,21 +9,25 @@ body {
     font-size: 2em;
     position: relative;
     left: -1000px;
-    display: inline-block;
-    padding: 0 1em 0 0.8em;
     margin: 0.05em;
-    border-top-right-radius: 1.5em;
-    border-bottom-right-radius: 1.5em;
-    line-height: 0.75em;
+    line-height: 1.5em;
+    display: inline-block;
 }
 
-.message.top {
-    border-top-left-radius: 1.5em;
+/* border-top-right-radius: 3em;
+    border-bottom-right-radius: 3em; */
+
+.message p {
+    margin: 0.5em;
+}
+
+/* .message.top {
+    border-top-left-radius: 3em;
 }
 
 .message.bottom {
-    border-bottom-left-radius: 1.5em;
-}
+    border-bottom-left-radius: 3em;
+} */
 
 .animate {
     animation: appear 0.5s cubic-bezier(.75,-0.5,0.5,1.75);
@@ -31,21 +35,21 @@ body {
 
 /* Smaller screens */
 
-@media (max-width: 1050px), (max-height: 900px) { 
+@media (max-width: 800px), (max-height: 800px) { 
     .message {
         font-size: 1.75em;
     }
 
 }
 
-@media (max-width: 900px), (max-height: 750px) { 
+@media (max-width: 700px), (max-height: 700px) { 
     .message {
         font-size: 1.5em;
     }
 
 }
 
-@media (max-width: 750px), (max-height: 550px) { 
+@media (max-width: 600px), (max-height: 620px) { 
     .message {
         font-size: 1.25em;
 
@@ -53,16 +57,16 @@ body {
 
 }
 
-@media (max-width: 650px), (max-height: 450px) { 
+@media (max-width: 500px), (max-height: 520px) { 
     .message {
         font-size: 1em;
     }
 
 }
 
-@media (max-width: 520px), (max-height: 400px) { 
+@media (max-width: 400px), (max-height: 420px) { 
     .message {
-        font-size: 0.70em;
+        font-size: 0.85em;
     }
 
 }
