--- a/style.css
+++ b/style.css
@@ -4,33 +4,36 @@ body {
 }
 
 .message {
-    background-color: rgb(230, 230, 230);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 2em;
     position: relative;
     left: -1000px;
-    margin: 0.05em;
     line-height: 1.5em;
-    display: inline-block;
+    display: inline-flex;
 }
 
-/* border-top-right-radius: 3em;
-    border-bottom-right-radius: 3em; */
+.message::before {
+    float: left;
+    content: "";
+    width: 1em;
+    border-top-left-radius: 2em;
+    border-bottom-left-radius: 2em;
+    background-color: rgb(230, 230, 230);
+}
+
+.message::after {
+    float: right;
+    content: "";
+    width: 1em;
+    border-top-right-radius: 2em;
+    border-bottom-right-radius: 2em;
+    background-color: rgb(230, 230, 230);
+}
 
 .message p {
-    margin: 0.5em;
-}
-
-/* .message.top {
-    border-top-left-radius: 3em;
-}
-
-.message.bottom {
-    border-bottom-left-radius: 3em;
-} */
-
-.animate {
-    animation: appear 0.5s cubic-bezier(.75,-0.5,0.5,1.75);
+    margin: 0 -0.1em;
+    padding: 0.2em;
+    background-color: rgb(230, 230, 230);
 }
 
 /* Smaller screens */
@@ -42,14 +45,14 @@ body {
 
 }
 
-@media (max-width: 700px), (max-height: 700px) { 
+@media (max-width: 750px), (max-height: 700px) { 
     .message {
         font-size: 1.5em;
     }
 
 }
 
-@media (max-width: 600px), (max-height: 620px) { 
+@media (max-width: 650px), (max-height: 620px) { 
     .message {
         font-size: 1.25em;
 
@@ -57,14 +60,14 @@ body {
 
 }
 
-@media (max-width: 500px), (max-height: 520px) { 
+@media (max-width: 550px), (max-height: 520px) { 
     .message {
         font-size: 1em;
     }
 
 }
 
-@media (max-width: 400px), (max-height: 420px) { 
+@media (max-width: 450px), (max-height: 420px) { 
     .message {
         font-size: 0.85em;
     }
