--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 .message p {
     margin: 0 -0.1em;
-    padding: 0.2em;
+    padding: 0.2em 0.1em;
     background-color: rgb(230, 230, 230);
 }
 
