create typing bubble animation

--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ body {
     background-color: rgb(230, 230, 230);
 }
 
+.message.bubbles {
+    left: -5.4em;
+}
+
+.message span {
+    display: inline-block;
+    background-color: #B6B5BA;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 100%;
+    margin-left: 0.1em;
+}
+
 /* Smaller screens */
 
 @media (max-width: 800px), (max-height: 800px) { 
