--- a/style.css
+++ b/style.css
@@ -3,6 +3,45 @@ body {
     padding: 1em;
 }
 
+.cvButton {
+    position: absolute;
+    bottom: 1.5em;
+    right: 1.5em;
+}
+
+.cvButton a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.cvButton a:active {
+    color: white;
+}
+
+.cvButton button{
+    display: inline-block;
+    padding: 1em;
+    font-size: 1em;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: black;
+    border: none;
+    border-radius: 1em;
+    box-shadow: 0 9px #999;
+}
+
+.cvButton button:hover {background-color: lightgrey;}
+
+.cvButton button:active {
+    background-color: rgb(155, 155, 155);
+    color: white;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
 .message {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 2em;
@@ -52,7 +91,7 @@ body {
 /* Smaller screens */
 
 @media (max-width: 800px), (max-height: 800px) { 
-    .message {
+    .message, {
         font-size: 1.75em;
     }
 
