--- a/style.css
+++ b/style.css
@@ -1,124 +1,79 @@
 body {
-    background-color: #fafafa;
-    padding: 1em;
-}
-
-.cvButton {
-    position: absolute;
-    bottom: 1.5em;
-    right: 1.5em;
-}
-
-.cvButton a {
-    color: black;
-    text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.cvButton a:active {
-    color: white;
-}
-
-.cvButton button{
-    display: inline-block;
-    opacity: 0;
-    padding: 1em;
-    font-size: 1em;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: black;
-    border: none;
-    border-radius: 1em;
-    box-shadow: 0 9px #999;
-}
-
-.cvButton button:hover {background-color: lightgrey;}
-
-.cvButton button:active {
-    background-color: rgb(155, 155, 155);
-    color: white;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+  background-color: #fafafa;
+  padding: 1em;
 }
 
 .message {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 2em;
-    position: relative;
-    left: -1000px;
-    line-height: 1.5em;
-    display: inline-flex;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+  font-size: 2em;
+  position: relative;
+  left: -5000px;
+  line-height: 1.5em;
+  display: inline-flex;
 }
 
 .message::before {
-    float: left;
-    content: "";
-    width: 1em;
-    border-top-left-radius: 2em;
-    border-bottom-left-radius: 2em;
-    background-color: rgb(230, 230, 230);
+  float: left;
+  content: '';
+  width: 1em;
+  border-top-left-radius: 2em;
+  border-bottom-left-radius: 2em;
+  background-color: rgb(230, 230, 230);
 }
 
 .message::after {
-    float: right;
-    content: "";
-    width: 1em;
-    border-top-right-radius: 2em;
-    border-bottom-right-radius: 2em;
-    background-color: rgb(230, 230, 230);
+  float: right;
+  content: '';
+  width: 1em;
+  border-top-right-radius: 2em;
+  border-bottom-right-radius: 2em;
+  background-color: rgb(230, 230, 230);
 }
 
 .message p {
-    margin: 0 -0.1em;
-    padding: 0.2em 0.1em;
-    background-color: rgb(230, 230, 230);
+  margin: 0 -0.1em;
+  padding: 0.2em 0.1em;
+  background-color: rgb(230, 230, 230);
 }
 
 .message span {
-    display: inline-block;
-    background-color: #B6B5BA;
-    width: 0.5em;
-    height: 0.5em;
-    border-radius: 100%;
-    margin: 0.05em;
+  display: inline-block;
+  background-color: #b6b5ba;
+  width: 0.5em;
+  height: 0.5em;
+  border-radius: 100%;
+  margin: 0.05em;
 }
 
 /* Smaller screens */
 
-@media (max-width: 800px), (max-height: 800px) { 
-    .message {
-        font-size: 1.75em;
-    }
-
+@media (max-width: 800px), (max-height: 800px) {
+  .message {
+    font-size: 1.75em;
+  }
 }
 
-@media (max-width: 750px), (max-height: 700px) { 
-    .message {
-        font-size: 1.5em;
-    }
-
+@media (max-width: 750px), (max-height: 700px) {
+  .message {
+    font-size: 1.5em;
+  }
 }
 
-@media (max-width: 650px), (max-height: 620px) { 
-    .message {
-        font-size: 1.25em;
-
-    }
-
+@media (max-width: 650px), (max-height: 620px) {
+  .message {
+    font-size: 1.25em;
+  }
 }
 
-@media (max-width: 550px), (max-height: 520px) { 
-    .message {
-        font-size: 1em;
-    }
-
+@media (max-width: 550px), (max-height: 520px) {
+  .message {
+    font-size: 1em;
+  }
 }
 
-@media (max-width: 450px), (max-height: 420px) { 
-    .message {
-        font-size: 0.85em;
-    }
-
+@media (max-width: 450px), (max-height: 420px) {
+  .message {
+    font-size: 0.85em;
+  }
 }
